# play-with-bazel

./: .gitignore  README.md
example-a/: WORKSPACE
example-a/package-a/: BUILD  BUILD.bazel  version.bzl
example-a/package-a/src/main/java/com/example/: Greeting.java
example-a/package-b/: WORKSPACE  version.bzl
example-a/package-c/: BUILD.bazel  WORKSPACE  version.bzl
example-a/package-c/src/main/java/com/example/cmdline/: BUILD  Runner.java
example-a/package-d/: BUILD
example-b/: BUILD.bazel  WORKSPACE
example-b/package-b/: BUILD.bazel
example-b/package-b/src/main/java/com/example/: Greeting.java  ProjectRunner.java
example-b/package-c/: BUILD.bazel
example-b/package-c/src/main/java/com/example/: Greeting.java
example-b/package-c/src/main/java/com/example/cmdline/: Runner.java
