load("@rules_java//java:defs.bzl", "java_binary")

#java_binary(
#    name = "runnerPackageC",
#    srcs = ["src/main/java/com/example/cmdline/Runner.java"],
#    main_class = "com.example.cmdline.Runner",
#    deps = ["//:greeterPackageC"],
#)

java_library(
    name = "greetingPackageC",
    srcs = ["src/main/java/com/example/Greeting.java"],
    visibility = ["//src/main/java/com/example/cmdline:__pkg__"],
)